# NQX

./: .gitignore  .style.yapf  AUDIT_AND_RESULTS.md  CHANGELOG.md  CHECKSUMS.sha256  NOTICE  README.md  RELEASE_NOTES_0.4.0.md  pyproject.toml
benchmarks/: README.md  compare_core.py  compare_v03.py  results_runtime_cache.json  results_v02_equal_work.json  results_v03_equal_storage.json  runtime_cache.py
configs/: bench_qwen3_0_6b.json  bench_qwen3_0_6b_full_sweep.json  bench_qwen3_4b.json  qwen3_0_6b_balanced.json
docs/: DESIGN.md  FULL_MODEL_RUNBOOK.md  MIGRATION.md  REAL_MODEL_BENCHMARKS.md  UPSTREAM.md  VALIDATION.md
examples/: matrix_demo.py
scripts/: benchmark_qwen.sh  benchmark_qwen_full_sweep.sh  benchmark_qwen_kernel.sh  benchmark_qwen_quick.sh  preflight_qwen.sh
src/nanoquant/: __init__.py  main.py
src/nanoquant/bench/: __init__.py  config.py  metrics.py  models.py  preflight.py  runner.py  runtime.py  storage.py
src/nanoquant/core/: __init__.py  admm_dbf.py  admm_nq.py  admm_nqx.py  budget.py  compress_block.py  compress_model.py  importance.py
src/nanoquant/kernel/: __init__.py  bench_decode.sh  compile_kernel.sh  pybind.cpp  setup.py  test_decode.py  utils.py
src/nanoquant/modules/: __init__.py  auto_model.py  hub.py  linear.py  quant_config.py
src/nanoquant/optimi/: __init__.py  adam.py  adamw.py  optimizer.py  utils.py
src/nanoquant/reference/: __init__.py  cli.py  core.py  format.py  packing.py
src/nanoquant/utils/: __init__.py  data_utils.py  eval_utils.py  load_utils.py  utils.py
tests/: test_benchmark.py  test_reference.py
(+6 files in other folders)
